# serializer version: 1
# name: test_entities[button.alpha_bidet_jx2_dry-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_dry',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dry',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dry',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dry',
    'unique_id': '01JTEST0000000000000000000_dry',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_dry-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Dry',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_dry',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_easy_wash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_easy_wash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Easy wash',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Easy wash',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'easy_wash',
    'unique_id': '01JTEST0000000000000000000_easy_wash',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_easy_wash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Easy wash',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_easy_wash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_front-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_front',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Front',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Front',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'front',
    'unique_id': '01JTEST0000000000000000000_front',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_front-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Front',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_front',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_nozzle_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_nozzle_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Nozzle down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Nozzle down',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nozzle_down',
    'unique_id': '01JTEST0000000000000000000_nozzle_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_nozzle_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Nozzle down',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_nozzle_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_nozzle_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_nozzle_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Nozzle up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Nozzle up',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nozzle_up',
    'unique_id': '01JTEST0000000000000000000_nozzle_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_nozzle_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Nozzle up',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_nozzle_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_rear-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_rear',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rear',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Rear',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rear',
    'unique_id': '01JTEST0000000000000000000_rear',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_rear-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Rear',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_rear',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '01JTEST0000000000000000000_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_stop_hold-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_stop_hold',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop (hold)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop (hold)',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop_hold',
    'unique_id': '01JTEST0000000000000000000_stop_hold',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_stop_hold-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Stop (hold)',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_stop_hold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_wash_and_dry-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_wash_and_dry',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wash and dry',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wash and dry',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wash_and_dry',
    'unique_id': '01JTEST0000000000000000000_wash_and_dry',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_wash_and_dry-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Wash and dry',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_wash_and_dry',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_water_dry_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_water_dry_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Water/dry down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Water/dry down',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'water_dry_down',
    'unique_id': '01JTEST0000000000000000000_water_dry_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_water_dry_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Water/dry down',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_water_dry_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_water_dry_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.alpha_bidet_jx2_water_dry_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Water/dry up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Water/dry up',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'water_dry_up',
    'unique_id': '01JTEST0000000000000000000_water_dry_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.alpha_bidet_jx2_water_dry_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Water/dry up',
    }),
    'context': <ANY>,
    'entity_id': 'button.alpha_bidet_jx2_water_dry_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[device]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'alpha_bidet_infrared',
        '01JTEST0000000000000000000',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Alpha Bidet',
    'model': 'JX2',
    'model_id': None,
    'name': 'Alpha Bidet JX2',
    'name_by_user': None,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
